--- a/src/index.scss
+++ b/src/index.scss
@@ -7,8 +7,8 @@ go to vscode settings, search for unknown, select scss and select ignore
 @tailwind utilities;
 
 @import "https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap";
-
-
+@import 'react-toastify/dist/ReactToastify.css';
+@import 'react-quill/dist/quill.snow.css';
 * {
   margin: 0;
   padding: 0;
